# 3D_Detection_Annotation

./: .gitignore
automatic_annotation/: CMakeLists.txt  package.xml
automatic_annotation/config/: default.yaml
automatic_annotation/docs/: 2026-04-27-static-object-ghosting-fix.md
automatic_annotation/include/automatic_annotation/: const_value.hpp  gen_prompt_point.hpp  image_matching_utils.hpp
automatic_annotation/launch/: automatic_annotation_launch.py
automatic_annotation/script/: convert_extrinsics.py
automatic_annotation/src/: automatic_annotation_node.cpp  gen_prompt_point.cpp  image_matching_utils.cpp
automatic_annotation/test/: test_image_matching_utils.cpp
common_utils/: CMakeLists.txt  package.xml
common_utils/config/: common_utils_conf.yaml
common_utils/include/common_utils/: common_utils.h  logger.h
common_utils/src/: common_utils.cc  logger.cc
cv_bridge_with_opencv411/: CMakeLists.txt  package.xml
cv_bridge_with_opencv411/include/cv_bridge_with_opencv411/: cv_bridge.h  rgb_colors.h
cv_bridge_with_opencv411/src/: CMakeLists.txt  cv_bridge.cpp  module.hpp  rgb_colors.cpp
cv_bridge_with_opencv411/test/: CMakeLists.txt  test_compression.cpp  test_endian.cpp  test_rgb_colors.cpp  utest.cpp  utest2.cpp
docs/: annotationctl-quickstart.md  nusc_env_setup.md
docs/analysis/: 2026-04-27-accumulated-pointcloud-ghosting-analysis.md  2026-04-28-finalize-submit-frame-set-alignment-review.md
docs/superpowers/plans/: 2026-04-15-merge-xtreme-empty-sampling.md  2026-04-16-xtreme-server-workflow.md  2026-04-28-finalize-submit-frame-set-alignment.md  2026-04-28-left-image-async-matching.md
docs/superpowers/specs/: 2026-04-15-annotation-pipeline-level1-design.md  2026-04-16-xtreme-server-workflow-design.md  2026-04-28-left-image-async-matching-design.md
environment/: nusc_env.yml
pre_annotation_factory/: .gitignore
pre_annotation_factory/my_package/core/: __init__.py  data_types.py  math_utils.py
pre_annotation_factory/my_package/io_modules/: data_loader.py  export_calibrated_sensor.py  export_sample_json.py  export_static_instance.py  nusc_json_exporter.py
pre_annotation_factory/my_package/ui/: __init__.py  app.py
pre_annotation_factory/my_package/workflow/: __init__.py  job_models.py  job_store.py  pipeline.py  xtreme_gateway.py
pre_annotation_factory/scripts/: MergeXtremeDynamic.py  annotationctl.py  extract_archives.py  replay_rosbag_main.py
pre_annotation_factory/scripts/unused/: KITTI_semantic.py  calibration_tuner_main.py  convert_to_cvat_upload.py  convert_to_xtreme_upload.py  export_tuned_kitti.py
pre_annotation_factory/tests/: test_annotationctl_pipeline.py  test_job_models.py  test_job_store.py  test_merge_xtreme_dynamic.py  test_pc_bin.py  test_xtreme_gateway.py
