<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>automatic_annotation</name>
  <version>0.0.0</version>
  <description>Automatic annotation package for cross-modal data</description>
  <maintainer email="keyao.li@bynav.com">Keyao Li</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>common_utils</depend>
  <depend>eigen</depend>
  <depend>pcl</depend>
  <depend>pcl_conversions</depend>
  <depend>cv_bridge_with_opencv411</depend>
  <depend>opencv</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>
  <depend>libtinyxml2-dev</depend>

  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
