<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>common_utils</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="lbq@todo.todo">lbq</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>rclcpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>spdlog</depend>
  <depend>CURL</depend>
  <!-- <depend>roslib</depend> -->

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
